apps/klavier/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: klavier
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
